Cannot create shortcut for toggling modes #35933

Closed
opened 2013-07-01 11:56:44 +02:00 by Shakanos · 5 comments

%%%--- Operating System, Graphics card ---
Windows 8 x64, GTX560SE

- Blender version with error ---

r57892

- Short description of error ---

Cannot create shortcut for toggling modes (in Sculpt Mode, Texture Paint, e.g.) via "Add shortcut" http://i.imgur.com/D6YJHTN.png

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

There is "Add Shortcut" option in modes other than "Object mode", but it's not working properly.%%%

%%%--- Operating System, Graphics card --- Windows 8 x64, GTX560SE - Blender version with error --- r57892 - Short description of error --- Cannot create shortcut for toggling modes (in Sculpt Mode, Texture Paint, e.g.) via "Add shortcut" http://i.imgur.com/D6YJHTN.png - Steps for others to reproduce the error (preferably based on attached .blend file) --- There is "Add Shortcut" option in modes other than "Object mode", but it's not working properly.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%It works fine for me, what is the problem exactly? Does it give an error, the shortcut does not appear in the menu, the shortcut doesn't work, .. ? Is it specific to some keyboard combinations?%%%

%%%It works fine for me, what is the problem exactly? Does it give an error, the shortcut does not appear in the menu, the shortcut doesn't work, .. ? Is it specific to some keyboard combinations?%%%
Author

%%%For me it works fine only in "Object mode". In other modes the shortcut does not appear in the menu and doesn't work. So I can create shortcut for toggling "Object mode" to "Sculpt mode", but I can't create shortcut for reverse operation - "Sculpt mode" to "Object mode".%%%

%%%For me it works fine only in "Object mode". In other modes the shortcut does not appear in the menu and doesn't work. So I can create shortcut for toggling "Object mode" to "Sculpt mode", but I can't create shortcut for reverse operation - "Sculpt mode" to "Object mode".%%%

%%%Ah I see, fix in svn revision 57967, thanks for the report.%%%

%%%Ah I see, fix in svn revision 57967, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35933
No description provided.