Fix #35933: setting shortcut keys in object mode menu didn't work correct.